<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/notification"
            android:enabled="true"
            android:icon="@drawable/ic_news"
            android:title="@string/notification"
            app:actionViewClass="android.widget.TextView" />
    </group>
    <group android:id="@+id/group2">
        <item
            android:id="@+id/shedule"
            android:enabled="true"
            android:icon="@drawable/ic_shedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/record_training"
            android:enabled="true"
            android:icon="@drawable/ic_record_training"
            android:title="@string/record_training" />
        <item
            android:id="@+id/calendar_wod"
            android:enabled="true"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar_wod" />
        <item
            android:id="@+id/myResults"
            android:enabled="true"
            android:icon="@drawable/ic_my_results"
            android:title="@string/myResults" />
    </group>
    <group >
        <item
            android:id="@+id/definition"
            android:enabled="true"
            android:icon="@drawable/ic_dictionary"
            android:title="@string/definition" />
        <item
            android:id="@+id/profile"
            android:enabled="true"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/alarm"
            android:enabled="true"
            android:icon="@drawable/ic_bell"
            android:title="@string/localNotification" />
        <item
            android:id="@+id/contacts"
            android:enabled="true"
            android:icon="@drawable/ic_phone"
            android:title="@string/contacts" />
    </group>


</menu>