<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/parnasgym2"
                        tools:ignore="ContentDescription" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient_bg" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tvGymParnas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/gymParnas"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvAddressParnas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="map"
                    android:gravity="center_horizontal"
                    android:text="@string/addressParnas"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tvRefinement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/refinement"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvPhoneParnas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:autoLink="phone"
                    android:gravity="center_horizontal"
                    android:text="@string/contactNumberParnas"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/colorWhite" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="matrix"
                        android:src="@drawable/myzhestvogym2"
                        tools:ignore="ContentDescription" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient_bg" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tvGymMyzhestvo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/gymMyzhestvo"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvAddressMyzhestvo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/addressMyzhestvo"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvPhoneMyzhestvo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:autoLink="phone"
                    android:gravity="center_horizontal"
                    android:text="@string/contactNumberMyzhestvo"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/colorWhite" />

                <TextView
                    android:id="@+id/tvWeb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:autoLink="web"
                    android:gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/contactWeb"
                    android:textColor="@color/colorRedPrimary" />

                <TextView
                    android:id="@+id/tvMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:autoLink="email"
                    android:gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/contactMail"
                    android:textColor="@color/colorRedPrimary" />

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/ibInstagram"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/instagram"
                        android:contentDescription="@string/descriptionInstagram" />

                    <ImageButton
                        android:id="@+id/ibVK"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/vk"
                        android:contentDescription="@string/descriptionGroupVK" />
                </TableRow>

            </LinearLayout>

            <TextView
                android:id="@+id/textView41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/appVersion"
                android:textColor="@color/colorRedPrimary"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/Label"
                android:textColor="@color/colorRedPrimary"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

</android.widget.RelativeLayout>