<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView15"
            style="@style/MainTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/strEmailText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView48"
            style="@style/MainTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/strEmailTextOld" />

        <TextView
            android:id="@+id/tvOldEmail"
            style="@style/MainTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/empty"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView50"
            style="@style/MainTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/strEmailTextNew" />

        <EditText
            android:id="@+id/etChangeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textWebEmailAddress"
            android:text="@string/empty"
            android:textColor="@color/colorRedPrimary"
            android:theme="@style/Theme.App.Base"
            tools:ignore="LabelFor"
            android:autofillHints="@string/empty"
            tools:targetApi="o" />

        <ProgressBar
            android:id="@+id/pbChangeEmail"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="invisible" />

        <Button
            android:id="@+id/btnChangeEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/btnEmailSaveNew" />

    </LinearLayout>

</android.widget.RelativeLayout>